<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    style="?attr/materialCardViewElevatedStyle"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_photo_presiden"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_negara"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/country_name"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/img_photo_presiden"
            card_view:layout_constraintTop_toTopOf="@id/img_photo_presiden"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_begin="169dp" />
        />

        <TextView
            android:id="@+id/tv_text_nama_presiden"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/Nama"
            android:textSize="10sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/img_photo_presiden"
            card_view:layout_constraintTop_toBottomOf="@id/tv_negara"
            card_view:layout_constraintEnd_toEndOf="@id/guideline" />

        <TextView
            android:id="@+id/titik_2"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center_vertical"
            android:text="@string/titik2"
            android:textSize="10sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/guideline"
            card_view:layout_constraintTop_toTopOf="@id/tv_text_nama_presiden"/>

        <TextView
            android:id="@+id/tv_name_presiden"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/president_name"
            android:textSize="10sp"
            android:gravity="center_vertical"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintStart_toEndOf="@id/titik_2"
            card_view:layout_constraintTop_toTopOf="@id/tv_text_nama_presiden" />


        <TextView
            android:id="@+id/tv_text_nama_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/status"
            android:textSize="10sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/img_photo_presiden"
            card_view:layout_constraintTop_toBottomOf="@id/tv_text_nama_presiden"
            card_view:layout_constraintEnd_toEndOf="@id/guideline" />

        <TextView
            android:id="@+id/titik_4"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center_vertical"
            android:text="@string/titik2"
            android:textSize="10sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/guideline"
            card_view:layout_constraintTop_toTopOf="@id/tv_text_nama_status"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/status"
            android:textSize="10sp"
            android:gravity="center_vertical"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintStart_toEndOf="@id/titik_4"
            card_view:layout_constraintTop_toTopOf="@id/tv_text_nama_status" />

        <TextView
            android:id="@+id/tv_text_mata_uang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/mata_uang"
            android:textSize="10sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/img_photo_presiden"
            card_view:layout_constraintTop_toBottomOf="@id/tv_status"
            card_view:layout_constraintEnd_toEndOf="@id/guideline" />

        <TextView
            android:id="@+id/titik"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center_vertical"
            android:text="@string/titik2"
            android:textSize="10sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/guideline"
            card_view:layout_constraintTop_toTopOf="@id/tv_text_mata_uang"/>

        <TextView
            android:id="@+id/tv_mata_uang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/nama_mata_uang"
            android:textSize="10sp"
            android:gravity="center_vertical"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintStart_toEndOf="@id/titik"
            card_view:layout_constraintTop_toTopOf="@id/tv_text_mata_uang" />

        <TextView
            android:id="@+id/tv_text_nama_bahasa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/bahasa"
            android:textSize="10sp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/img_photo_presiden"
            card_view:layout_constraintTop_toBottomOf="@id/tv_text_mata_uang"
            card_view:layout_constraintEnd_toEndOf="@id/guideline" />

        <TextView
            android:id="@+id/titik_3"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center_vertical"
            android:text="@string/titik2"
            android:textSize="10sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/guideline"
            card_view:layout_constraintTop_toTopOf="@id/tv_text_nama_bahasa"/>

        <TextView
            android:id="@+id/tv_nama_bahasa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/bahasa"
            android:textSize="10sp"
            android:gravity="center_vertical"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintStart_toEndOf="@id/titik_3"
            card_view:layout_constraintTop_toTopOf="@id/tv_text_nama_bahasa" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>